--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <div class="box A">     
             <div class="cover"><img class="pacman" src="images\pacman_cover.png" alt="Error viewing the image"></div>
             <div class="playbutton">
-                <a class="play-btn" href="pacman" target="_blank"></a>
+                <a class="play-btn" href="midpacman" target="_blank"></a>
             </div>
             <div class="gamename"><p>PACMAN</p></div>
             <div class="gametext">
@@ -32,7 +32,7 @@
         <div class="box B">
             <div class="cover"><img  class="flappy" src="images\flappy_boxcover.png" alt="Error viewing the image"></div>
             <div class="playbutton">
-                <a class="play-btn" href="flappy" target="_blank"></a>
+                <a class="play-btn" href="midflappy" target="_blank"></a>
             </div>
             <div class="gamename"><p>FLAPPY BIRD</p></div>
             <div class="gametext">
@@ -43,7 +43,7 @@
         <div class="box C">
             <div class="cover"><img class="space" src="images\invader_cover.png" alt="Error viewing the image"></div>
             <div class="playbutton">
-                <a class="play-btn" href="galaxy" target="_blank"></a>
+                <a class="play-btn" href="midgalaxy" target="_blank"></a>
             </div>
             <div class="gamename"><p>SPACE SHOOTER</p></div>
             <div class="gametext">
