--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
 <body>
     <img src="images\logo.svg" class="logo" alt="">
     <ul>
-        <li><a href="">Home</a></li><li><a href="">Games</a></li><li><a href="">Contact</a></li>
+        <li><a href="#homeSection">Home</a></li><li><a href="#gameSection">Games</a></li><li><a href="">Contact</a></li>
     </ul>
-    <div class="top">
+    <div class="top" id="homeSection">
         <img src="images\transparentconsole.svg" class="center image">
         <img src="images\rightfinal.svg" class="right image">
         <img src="images\leftfinal.svg" class="left image">
         <p>Arcade<br>Arena</p>
     </div>
-    <div class="bottom">
+    <div class="bottom" id="gameSection">
         <div class="box A">     
             <div class="cover"><img class="pacman" src="images\pacman_cover.png" alt="Error viewing the image"></div>
             <div class="playbutton">
