--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 <body>
     <img src="images\logo.svg" class="logo" alt="">
     <ul>
-        <li><a href="#homeSection">Home</a></li><li><a href="#gameSection">Games</a></li><li><a href="">Contact</a></li>
+        <li><a href="#gameSection">Games</a></li><li><a href="">Contact</a></li>
     </ul>
-    <div class="top" id="homeSection">
+    <div class="top">
         <img src="images\transparentconsole.svg" class="center image">
         <img src="images\rightfinal.svg" class="right image">
         <img src="images\leftfinal.svg" class="left image">
